feat(parity): YML parity 80.1% → 81.7% via 5 cluster fixes
- WeakDuplicate: drop weak season/episode overlapping video_codec/audio_codec
  (kills "H.264" 264 → S2E64 ghost).
- TitleExtractor: when serieNameFilepart has 2+ usable holes, take filename's
  first hole as title and skip outer-dir; tag "filepart-title" so
  EpisodeTitleExtractor.filepart3 doesn't re-add outer-dir title.
- EpisodeWordExtractor: skip when type=movie hint, so "Open Season 2 (2008)"
  keeps season-word out of matches.
- CountryExtractor: short codes (2-3 chars) require ALL CAPS to read as country;
  "Us" is a word, "US" is a code (fixes "This.is.Us").
- EpisodeTitleExtractor.removeConflictsWithEpisodeTitle: pick neighbouring
  matches by start/end position (min/max), not stream order — `findFirst()` was
  returning a non-adjacent match in NEXT_NAMES and clobbering year.
- Formatters.cleanup: extend acronym-dot detection leftward by one position
  when the left run is a single letter ("S.W.A.T.").

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>